--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,3 +1,58 @@
 <app-nav-bar></app-nav-bar>
-<p>product works!</p>
+<div class="table-brand">
+    <div style="overflow:auto">
+        <div class="mat-elevation-z8">
+            <mat-table [dataSource]="listData">
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns:displayedColumns;"></mat-row>
+               
+                <ng-container matColumnDef="ProductID" >
+                    <mat-header-cell *matHeaderCellDef>Product ID</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.productId}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="ProductName">
+                    <mat-header-cell *matHeaderCellDef>Product Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.productName}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Quantity">
+                        <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
+                        <mat-cell *matCellDef="let element">{{element.quantity}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Price">
+                        <mat-header-cell *matHeaderCellDef>Price</mat-header-cell>
+                        <mat-cell *matCellDef="let element">{{element.price}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="SaleDate">
+                    <mat-header-cell *matHeaderCellDef>SaleDate</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.saleDate}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Image">
+                    <mat-header-cell *matHeaderCellDef>Image</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.image}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Description">
+                    <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.description}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="BrandName">
+                    <mat-header-cell *matHeaderCellDef>Brand Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.brandEntity.brandName}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Options">
+                        <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                            <button mat-icon-button (click)="onEdit(row)">
+                                <mat-icon>launch</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn" (click)="onDelete(row)">
+                                <mat-icon>delete_outline</mat-icon>
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+            </mat-table>
+        </div>
+    </div>
+</div>
+<button class="mt-2" mat-raised-button (click)="onAdd()" color="primary">Add Product</button>
 
