--- a/src/app/component/product/add-product/add-product.component.html
+++ b/src/app/component/product/add-product/add-product.component.html
@@ -91,6 +91,6 @@
             
 
             <button class="mt-4" mat-raised-button 
-            color="primary" type="submit" [disabled]="form.invalid">Add Brand</button>
+            color="primary" type="submit" [disabled]="form.invalid">Add Product</button>
         </form>
     </div>
