--- a/src/app/component/common/nav-bar/nav-bar.component.html
+++ b/src/app/component/common/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="nav">
-    <button class="btn btn-light" [routerLink]="['/product']">PRODUCT</button>
-    <button class="btn btn-light choose" [routerLink]="['/brand']">BRAND</button>
+    <button class="btn btn-light" [routerLink]="['/product']" routerLinkActive="active-button">PRODUCT</button>
+    <button class="btn btn-light" [routerLink]="['/brand']" routerLinkActive="active-button">BRAND</button>
     <div class="butLogin">
         <Button class="btn btn-light" [routerLink]="['/login']">LOGIN</Button>
     </div>
