update appearance edit brand

--- a/src/app/component/brand/add-brand/add-brand.component.html
+++ b/src/app/component/brand/add-brand/add-brand.component.html
@@ -6,42 +6,40 @@
 </div>
 <div style="overflow: auto; height: 450px;">
         <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Brand Name</span>
-                </div>
+            <div class="form-group">
+                <label>Brand Name</label>
                 <input required minlength="1" type="text" class="form-control" 
                 name="brandName" 
                 #brandName="ngModel" 
                 [(ngModel)]="brandService.formData.brandName">
                 <div class="text-left text-danger" *ngIf="brandName.invalid && brandName.touched">
-                    Please enter Department name
+                    Please enter Brand name
                 </div>
             </div>
-            <div class="mt-4 input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Logo</span>
-                    </div>
-                    <input required  type="file"  
-                    name="logo" 
-                    #logo="ngModel" (change)="onFileSelect($event)"
-                    [(ngModel)]="brandService.formData.logo">
-                    
+            <div class="form-group">
+                <label>Description</label>
+                <textarea required minlength="1" type="text" class="form-control" 
+                name="description" 
+                #description="ngModel" 
+                [(ngModel)]="brandService.formData.description" cols="30" rows="3"></textarea>
+                <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
+                    Please enter description
+                </div>
             </div>
-            <div class="mt-4 input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Description</span>
-                    </div>
-                    <input required minlength="1" type="text" class="form-control" 
-                    name="description" 
-                    #description="ngModel" 
-                    [(ngModel)]="brandService.formData.description">
-                    <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
-                        Please enter description
-                    </div>
+            <div class="form-group">
+                <label>Logo</label>
+                <input required  type="file"  
+                name="logo" class="form-control" 
+                #logo="ngModel" (change)="onFileSelect($event)"
+                [(ngModel)]="brandService.formData.logo">    
+                 
             </div>
+           
 
             <button class="mt-4" mat-raised-button 
             color="primary" type="submit" [disabled]="form.invalid">Add Brand</button>
+            
+            <button type="reset" class="btn btn-secondary but-reset">Reset</button>
         </form>
+        
     </div>
