--- a/src/app/component/brand/edit-brand/edit-brand.component.html
+++ b/src/app/component/brand/edit-brand/edit-brand.component.html
@@ -6,58 +6,48 @@
     </div>
     <div style="overflow: auto; height: 450px;">
             <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-                <div class="mt-4 input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Brand ID</span>
-                    </div>
+                <div class="form-group">
+                    <label>Brand ID</label>
                     <input readonly="readonly" type="text" class="form-control" 
                     name="brandId" 
                     #brandId="ngModel" 
                     [(ngModel)]="brandService.formData.brandId">
-                    <div class="text-left text-danger" *ngIf="brandId.invalid && brandId.touched">
-                        Please enter Department name
-                    </div>
+                    
                 </div>
 
-                <div class="mt-4 input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Brand Name</span>
-                    </div>
+                <div class="form-group">
+                    <label>Brand Name</label>
                     <input required minlength="1" type="text" class="form-control" 
                     name="brandName" 
                     #brandName="ngModel" 
                     [(ngModel)]="brandService.formData.brandName">
                     <div class="text-left text-danger" *ngIf="brandName.invalid && brandName.touched">
-                        Please enter Department name
+                        Please enter Brand name
                     </div>
                 </div>
-                <div class="mt-4 input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">Logo</span>
-                        </div>
-                        <input required minlength="1" type="text" class="form-control" 
-                        name="logo" 
-                        #logo="ngModel" 
-                        [(ngModel)]="brandService.formData.logo">
-                        <div class="text-left text-danger" *ngIf="logo.invalid && logo.touched">
-                            Please enter logo
-                        </div>
+                
+                <div class="form-group">
+                    <label>Description</label>
+                    <textarea required minlength="1" type="text" class="form-control" 
+                    name="description" 
+                    #description="ngModel" 
+                    [(ngModel)]="brandService.formData.description" cols="30" rows="3"></textarea>
+                    <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
+                        Please enter description
+                    </div>
                 </div>
-                <div class="mt-4 input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">Description</span>
-                        </div>
-                        <input required minlength="1" type="text" class="form-control" 
-                        name="description" 
-                        #description="ngModel" 
-                        [(ngModel)]="brandService.formData.description">
-                        <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
-                            Please enter description
-                        </div>
+                <div class="form-group">
+                    <label>Logo</label>
+                    <input  type="file" class="form-control" 
+                    name="logo" 
+                    #logo (change)="onFileSelect($event)"
+                    >
+                    
                 </div>
     
                 <button class="mt-4" mat-raised-button 
                 color="primary" type="submit" [disabled]="form.invalid">Update Brand</button>
+                <button type="reset" class="btn btn-secondary but-reset">Reset</button>
             </form>
         </div>
     
