--- a/src/app/component/brand/brand.component.html
+++ b/src/app/component/brand/brand.component.html
@@ -1,4 +1,19 @@
 <app-nav-bar></app-nav-bar>
+
+<!-- search -->
+<div class="brand-bar">
+    <div class="brand-butsearch">
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary butsearch" (click)="refreshBrandList(stringSearch)">Search</button>
+        </div>
+    </div>
+    <div class="brand-inputsearch">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Brand Name" [(ngModel)]="stringSearch">
+        </div>
+    </div>
+</div>
+<!-- table -->
 <div class="table-brand">
     <div style="overflow:auto">
         <div class="mat-elevation-z8">
