--- a/src/app/component/product/edit-product/edit-product.component.html
+++ b/src/app/component/product/edit-product/edit-product.component.html
@@ -4,100 +4,93 @@
         <mat-icon>close</mat-icon>
     </button>
 </div>
-<div style="overflow: auto; height: 450px;">
+<div style="overflow: hidden; height: 500px;">
         <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Product ID</span>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="">Product ID</label>
+                        <input readonly="readonly" type="text" class="form-control" 
+                        name="productId" 
+                        #productId="ngModel" 
+                        [(ngModel)]="productService.formData.productId">
+                        
+                    </div>
+                    <div class="form-group">
+                        <label for="">Product Name</label>
+                        <input required minlength="1" type="text" class="form-control" 
+                        name="productName" 
+                        #productName="ngModel" 
+                        [(ngModel)]="productService.formData.productName">
+                        <div class="text-left text-danger" *ngIf="productName.invalid && productName.touched">
+                            Please enter Product name
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Quantity</label>
+                        <input required minlength="1" type="number" class="form-control" 
+                        name="quantity" 
+                        #quantity="ngModel" 
+                        [(ngModel)]="productService.formData.quantity">
+                        <div class="text-left text-danger" *ngIf="quantity.invalid && quantity.touched">
+                            Please enter quantity
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Price</label>
+                        <input required minlength="1" type="number" class="form-control" 
+                        name="price" 
+                        #price="ngModel" 
+                        [(ngModel)]="productService.formData.price">
+                        <div class="text-left text-danger" *ngIf="price.invalid && price.touched">
+                            Please enter price
+                        </div>
+                    </div>
                 </div>
-                <input readonly="readonly" type="text" class="form-control" 
-                name="productId" 
-                #productId="ngModel" 
-                [(ngModel)]="productService.formData.productId">
-                
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="">Sale Date</label>
+                        <input required minlength="1" type="date" class="form-control" 
+                        name="saleDate" 
+                        #saleDate="ngModel" 
+                        [(ngModel)]="productService.formData.saleDate">
+                        <div class="text-left text-danger" *ngIf="saleDate.invalid && saleDate.touched">
+                            Please enter Sale Date
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Image</label>
+                        <input required minlength="1" type="text" class="form-control" 
+                        name="image" 
+                        #image="ngModel" 
+                        [(ngModel)]="productService.formData.image">
+                        <div class="text-left text-danger" *ngIf="image.invalid && image.touched">
+                            Please enter image
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Brand Name</label>
+                        <select class="form-control" name="brandName" #brandName="ngModel" [(ngModel)]="productService.formData.brandEntity.brandName">
+                            <option *ngFor="let name of listBrandName" [value]="name">
+                                {{name}}
+                            </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Description</label>
+                        <textarea required minlength="1" type="text" class="form-control" 
+                        name="description" 
+                        #description="ngModel" 
+                        [(ngModel)]="productService.formData.description"  cols="30" rows="3"></textarea>
+                        <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
+                            Please enter description
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Product Name</span>
-                </div>
-                <input required minlength="1" type="text" class="form-control" 
-                name="productName" 
-                #productName="ngModel" 
-                [(ngModel)]="productService.formData.productName">
-                <div class="text-left text-danger" *ngIf="productName.invalid && productName.touched">
-                    Please enter Product name
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Quantity</span>
-                </div>
-                <input required minlength="1" type="number" class="form-control" 
-                name="quantity" 
-                #quantity="ngModel" 
-                [(ngModel)]="productService.formData.quantity">
-                <div class="text-left text-danger" *ngIf="quantity.invalid && quantity.touched">
-                    Please enter quantity
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Price</span>
-                </div>
-                <input required minlength="1" type="number" class="form-control" 
-                name="price" 
-                #price="ngModel" 
-                [(ngModel)]="productService.formData.price">
-                <div class="text-left text-danger" *ngIf="price.invalid && price.touched">
-                    Please enter price
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Sale Date</span>
-                </div>
-                <input required minlength="1" type="date" class="form-control" 
-                name="saleDate" 
-                #saleDate="ngModel" 
-                [(ngModel)]="productService.formData.saleDate">
-                <div class="text-left text-danger" *ngIf="saleDate.invalid && saleDate.touched">
-                    Please enter Sale Date
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Image</span>
-                </div>
-                <input required minlength="1" type="text" class="form-control" 
-                name="image" 
-                #image="ngModel" 
-                [(ngModel)]="productService.formData.image">
-                <div class="text-left text-danger" *ngIf="image.invalid && image.touched">
-                    Please enter image
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Description</span>
-                </div>
-                <input required minlength="1" type="text" class="form-control" 
-                name="description" 
-                #description="ngModel" 
-                [(ngModel)]="productService.formData.description">
-                <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
-                    Please enter description
-                </div>
-            </div>
-            <div class="mt-4 input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">Brand Name</span>
-                </div>
-                <select name="brandName" #brandName="ngModel" [(ngModel)]="productService.formData.brandEntity.brandName">
-                    <option *ngFor="let name of listBrandName" [value]="name">
-                        {{name}}
-                    </option>
-                </select>
-            </div>
+            
+            
             
 
             <button class="mt-4" mat-raised-button 
