--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,5 +1,5 @@
 .form-login{
-    background-color: ghostwhite;
+    background-color: #f2f2f2;
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 4px 4px 5px gray;
