--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,4 +1,45 @@
 <app-nav-bar></app-nav-bar>
+<div class="product-bar">
+    <form #formSearch="ngForm" (submit)="refreshProductList(formSearch.value)">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-2">
+                <input type="text" class="form-control" name="productName" ngModel placeholder="Product name">
+            </div>
+            <div class="col-2">
+                <select class="custom-select" name="brandName" [ngModel]="this.brandNameDefault">
+                    <option *ngFor="let name of listBrandName" [value]="name">
+                        {{name}}
+                    </option>
+                </select>
+            </div>
+            <div class="col-2">
+                <select class="custom-select" [ngModel]="this.priceFromDefault" name="priceFrom">
+                    <option value="0">Price from</option>
+                    <option value="1000000">{{1000000 | currency:"VND":"symbol"}}</option>
+                    <option value="3000000">{{3000000 | currency:"VND":"symbol"}}</option>
+                    <option value="6000000">{{6000000 | currency:"VND":"symbol"}}</option>
+                    <option value="10000000">{{10000000 | currency:"VND":"symbol"}}</option>
+                    <option value="20000000">{{20000000 | currency:"VND":"symbol"}}</option>
+                </select>
+            </div>
+            <div class="col-2">
+                <select class="custom-select" [ngModel]="this.priceToDefault" ngModel name="priceTo">
+                    <option value="0">Price to</option>
+                    <option value="1000000">{{1000000 | currency:"VND":"symbol"}}</option>
+                    <option value="3000000">{{3000000 | currency:"VND":"symbol"}}</option>
+                    <option value="6000000">{{6000000 | currency:"VND":"symbol"}}</option>
+                    <option value="10000000">{{10000000 | currency:"VND":"symbol"}}</option>
+                    <option value="20000000">{{20000000 | currency:"VND":"symbol"}}</option>
+                </select>
+            </div>
+            <div class="col-2">
+                <button class="btn btn-primary butSearch" type="submit">Search</button>
+            </div>
+            <div class="col-1"></div>
+        </div>
+    </form>
+</div>
 <div class="table-brand">
     <div style="overflow:auto">
         <div class="mat-elevation-z8">
@@ -55,4 +96,32 @@
     </div>
 </div>
 <button class="mt-2" mat-raised-button (click)="onAdd()" color="primary">Add Product</button>
+<!-- Pagination -->
+<ul class="pagination pagination-sm justify-content-end">
+    <li class="page-item" [ngClass]="{'disabled': currentPage === 0}">
+        <button class="page-link" matTooltip="First page" (click)="setPageChange(0)">
+            <<
+        </button>
+    </li>
+    <li class="page-item" [ngClass]="{'disabled': currentPage === 0}">
+        <button class="page-link" matTooltip="Previous page" (click)="setPageChange(currentPage - 1)">
+            <
+        </button>
+    </li>
+    <li class="page-item" *ngFor="let page of pageNumbersList">
+        <button class="page-link" [ngClass]="{'pager': page -1 === currentPage}" matTooltip="Page {{ page }}" (click)="setPageChange(page - 1)">
+            {{ page }}
+        </button>
+    </li>
+    <li class="page-item" [ngClass]="{'disabled': currentPage === totalPage - 1}">
+        <button class="page-link" matTooltip="Next page" (click)="setPageChange(currentPage + 1)">
+            >
+        </button>
+    </li>
+    <li class="page-item" [ngClass]="{'disabled': currentPage === totalPage - 1}">
+        <button class="page-link" matTooltip="Last page" (click)="setPageChange(totalPage - 1)">
+            >>
+        </button>
+    </li>
+</ul>
 
