--- a/src/app/component/brand/del-brand/del-brand.component.css
+++ b/src/app/component/brand/del-brand/del-brand.component.css
@@ -9,3 +9,11 @@
     width: 100px;
     margin-left: 30px;
 }
+::ng-deep .custom-snackbar{
+    background-color: #33cc00!important;
+    color: white;
+}
+::ng-deep .custom-snackbar-err{
+    background-color: #e62e00!important;
+    color: white;
+}
