--- a/src/app/component/brand/brand.component.css
+++ b/src/app/component/brand/brand.component.css
@@ -24,3 +24,9 @@
 .brand-bar .butsearch{
     margin-left: 10px!important;
 }
+.mat-img{
+    width: 100px!important;
+}
+.img{
+    width: 100px!important;
+}
