--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,7 +1,6 @@
 .form-login{
     background-color: #f2f2f2;
     margin: 50px auto;
-    border-radius: 10px;
     box-shadow: 4px 4px 5px gray;
     width: 400px;
     padding-left: 50px;
@@ -9,4 +8,8 @@
 
 .form-login .form-group input{
     width: 300px;
+}
+::ng-deep .custom-snackbar-err{
+    background-color: #e62e00!important;
+    color: white;
 }
