--- a/src/app/component/product/product.component.css
+++ b/src/app/component/product/product.component.css
@@ -6,3 +6,17 @@
 	padding-bottom: 15px;
 	padding-top: 25px;
 }
+.current {
+    background-color: #3f51b5;
+    color: white;
+}
+.page-nav{
+    border-radius: 50%;
+    margin: 2px 3px;
+    padding: 5px 11px;
+}
+.page-nav-end{
+    border-radius: 50%!important;
+    margin: 2px 3px;
+    padding: 5px 8px;
+}
