--- a/src/app/component/brand/add-brand/add-brand.component.html
+++ b/src/app/component/brand/add-brand/add-brand.component.html
@@ -7,7 +7,7 @@
 <div style="overflow: auto; height: 450px;">
         <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
             <div class="form-group">
-                <label>Brand Name</label>
+                <label>Brand Name <span style="color: red;">(*)</span></label>
                 <input required minlength="1" type="text" class="form-control" 
                 name="brandName" 
                 #brandName="ngModel" 
@@ -25,7 +25,7 @@
                 
             </div>
             <div class="form-group">
-                <label>Logo</label>
+                <label>Logo <span style="color: red;">(*)</span></label>
                 <input required  type="file"  
                 name="logo" class="form-control" 
                 #logo="ngModel" (change)="onFileSelect($event)"
