--- a/src/app/component/product/add-product/add-product.component.html
+++ b/src/app/component/product/add-product/add-product.component.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-6">
                         <div class="form-group">
-                            <label for="">Product Name</label>
+                            <label for="">Product Name <span style="color: red;">(*)</span></label>
                             <input required minlength="1" type="text" class="form-control" 
                             name="productName" 
                             #productName="ngModel" 
@@ -19,7 +19,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Quantity</label>
+                            <label for="">Quantity <span style="color: red;">(*)</span></label>
                             <input required minlength="1" type="number" class="form-control" 
                             name="quantity" 
                             #quantity="ngModel" 
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Price</label>
+                            <label for="">Price <span style="color: red;">(*)</span></label>
                             <input required minlength="1" type="number" class="form-control" 
                             name="price" 
                             #price="ngModel" 
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="">Sale Date</label>
+                            <label for="">Sale Date <span style="color: red;">(*)</span></label>
                             <input required minlength="1" type="date" class="form-control" 
                             name="saleDate" 
                             #saleDate="ngModel" 
@@ -51,17 +51,15 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="">Image</label>
+                        <label for="">Image <span style="color: red;">(*)</span></label>
                         <input required  type="file" class="form-control" 
                         name="image" 
-                        #image="ngModel" 
+                        #image="ngModel" (change)="onFileSelect($event)"
                         [(ngModel)]="productService.formData.image">
-                        <div class="text-left text-danger" *ngIf="image.invalid && image.touched">
-                            Please enter image
-                        </div>
+                        
                     </div>
                     <div class="form-group">
-                            <label for="">Brand Name</label>
+                            <label for="">Brand Name <span style="color: red;">(*)</span></label>
                             <select class="form-control" name="brandName" #brandName="ngModel" [(ngModel)]="brandNameDefault">
                                 <option *ngFor="let name of listBrandName" [value]="name">
                                     {{name}}
@@ -71,13 +69,11 @@
                     <div class="form-group">
                         <label for="">Description</label>
                         
-                        <textarea required minlength="1" type="text" class="form-control" 
+                        <textarea type="text" class="form-control" 
                         name="description" 
                         #description="ngModel" 
                         [(ngModel)]="productService.formData.description" cols="30" rows="4"></textarea>
-                        <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
-                            Please enter description
-                        </div>
+                        
                     </div>
                     
                 </div>
