--- a/src/app/component/product/edit-product/edit-product.component.html
+++ b/src/app/component/product/edit-product/edit-product.component.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="">Product ID</label>
+                        <label for="">Product ID </label>
                         <input readonly="readonly" type="text" class="form-control" 
                         name="productId" 
                         #productId="ngModel" 
@@ -17,7 +17,7 @@
                         
                     </div>
                     <div class="form-group">
-                        <label for="">Product Name</label>
+                        <label for="">Product Name <span style="color: red;">(*)</span></label>
                         <input required minlength="1" type="text" class="form-control" 
                         name="productName" 
                         #productName="ngModel" 
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="">Quantity</label>
+                        <label for="">Quantity <span style="color: red;">(*)</span></label>
                         <input required minlength="1" type="number" class="form-control" 
                         name="quantity" 
                         #quantity="ngModel" 
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="">Price</label>
+                        <label for="">Price <span style="color: red;">(*)</span></label>
                         <input required minlength="1" type="number" class="form-control" 
                         name="price" 
                         #price="ngModel" 
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="">Sale Date</label>
+                        <label for="">Sale Date <span style="color: red;">(*)</span></label>
                         <input required minlength="1" type="date" class="form-control" 
                         name="saleDate" 
                         #saleDate="ngModel" 
@@ -59,17 +59,15 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="">Image</label>
-                        <input required minlength="1" type="text" class="form-control" 
-                        name="image" 
-                        #image="ngModel" 
-                        [(ngModel)]="productService.formData.image">
-                        <div class="text-left text-danger" *ngIf="image.invalid && image.touched">
-                            Please enter image
-                        </div>
+                        <label for="">Image <span style="color: red;">(*)</span></label>
+                        <input  type="file" class="form-control" 
+                        name="image" (change)="onFileSelect($event)"
+                        #image
+                        >
+                        
                     </div>
                     <div class="form-group">
-                        <label for="">Brand Name</label>
+                        <label for="">Brand Name <span style="color: red;">(*)</span></label>
                         <select class="form-control" name="brandName" #brandName="ngModel" [(ngModel)]="productService.formData.brandEntity.brandName">
                             <option *ngFor="let name of listBrandName" [value]="name">
                                 {{name}}
@@ -78,13 +76,11 @@
                     </div>
                     <div class="form-group">
                         <label for="">Description</label>
-                        <textarea required minlength="1" type="text" class="form-control" 
+                        <textarea type="text" class="form-control" 
                         name="description" 
                         #description="ngModel" 
                         [(ngModel)]="productService.formData.description"  cols="30" rows="3"></textarea>
-                        <div class="text-left text-danger" *ngIf="description.invalid && description.touched">
-                            Please enter description
-                        </div>
+                        
                     </div>
                     
                 </div>
