--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -16,19 +16,19 @@
             <div class="col-2">
                 <select class="custom-select" [ngModel]="this.priceFromDefault" name="priceFrom">
                     <option value="0">Price from</option>
-                    <option value="1000000">1.000.000</option>
-                    <option value="5000000">5.000.000</option> 
-                    <option value="10000000">10.000.000</option>
-                    <option value="20000000">20.000.000</option>
+                    <option value="1000000">1.000.000 vnđ</option>
+                    <option value="5000000">5.000.000 vnđ</option> 
+                    <option value="10000000">10.000.000 vnđ</option>
+                    <option value="20000000">20.000.000 vnđ</option>
                 </select>
             </div>
             <div class="col-2">
                 <select class="custom-select" [ngModel]="this.priceToDefault" ngModel name="priceTo">
                     <option value="0">Price to</option>
-                    <option value="1000000">1.000.000</option>
-                    <option value="5000000">5.000.000</option>
-                    <option value="10000000">10.000.000</option>
-                    <option value="20000000">20.000.000</option>
+                    <option value="1000000">1.000.000 vnđ</option>
+                    <option value="5000000">5.000.000 vnđ</option>
+                    <option value="10000000">10.000.000 vnđ</option>
+                    <option value="20000000">20.000.000 vnđ</option>
                 </select>
             </div>
             <div class="col-2">
@@ -59,7 +59,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Price">
                         <mat-header-cell *matHeaderCellDef>Price</mat-header-cell>
-                        <mat-cell *matCellDef="let element">{{element.price}}</mat-cell>
+                        <mat-cell *matCellDef="let element">{{element.price}} vnđ</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="SaleDate">
@@ -69,7 +69,7 @@
                 <ng-container matColumnDef="Image">
                     <mat-header-cell *matHeaderCellDef>Image</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="mat-img">
-                        <img src="../../../assets/images/{{ element.image }}" class="img">
+                        <img src="http://localhost:8080/ngocanh-pilot/images/{{ element.image }}" class="img">
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Description">
@@ -83,11 +83,11 @@
                 <ng-container matColumnDef="Options">
                         <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <button mat-icon-button (click)="onEdit(row)">
-                                <mat-icon>launch</mat-icon>
+                            <button class="btn btn-outline-primary" style="margin-right: 10px;" (click)="onEdit(row)">
+                                Edit
                             </button>
-                            <button mat-icon-button color="warn" (click)="onDelete(row)">
-                                <mat-icon>delete_outline</mat-icon>
+                            <button class="btn btn-outline-danger"  color="warn" (click)="onDelete(row)">
+                                Del
                             </button>
                         </mat-cell>
                     </ng-container>
