--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -7,7 +7,8 @@
                 <input type="text" class="form-control" name="productName" ngModel placeholder="Product name">
             </div>
             <div class="col-2">
-                <select class="custom-select" name="brandName" [ngModel]="this.brandNameDefault">
+                <select class="custom-select" name="brandName" ngModel>
+                    <option value="">Brand Name</option>
                     <option *ngFor="let name of listBrandName" [value]="name">
                         {{name}}
                     </option>
@@ -68,7 +69,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Image">
                     <mat-header-cell *matHeaderCellDef>Image</mat-header-cell>
-                    <mat-cell *matCellDef="let element" class="mat-img">
+                    <mat-cell *matCellDef="let element" class="mat-img" style="cursor: pointer;" (click)="showLogo(element)">
                         <img src="http://localhost:8080/ngocanh-pilot/images/{{ element.image }}" class="img">
                     </mat-cell>
                 </ng-container>
@@ -83,11 +84,11 @@
                 <ng-container matColumnDef="Options">
                         <mat-header-cell *matHeaderCellDef>Options</mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <button class="btn btn-outline-primary" style="margin-right: 10px;" (click)="onEdit(row)">
-                                Edit
+                            <button mat-icon-button  (click)="onEdit(row)">
+                                <mat-icon>launch</mat-icon>
                             </button>
-                            <button class="btn btn-outline-danger"  color="warn" (click)="onDelete(row)">
-                                Del
+                            <button mat-icon-button color="warn"  (click)="onDelete(row)">
+                                <mat-icon>delete_outline</mat-icon>
                             </button>
                         </mat-cell>
                     </ng-container>
