--- a/src/app/component/product/add-product/add-product.component.html
+++ b/src/app/component/product/add-product/add-product.component.html
@@ -4,7 +4,7 @@
         <mat-icon>close</mat-icon>
     </button>
 </div>
-<div style="overflow: hidden; height: 500px;">
+<div style="overflow: hidden; height: 550px;">
         <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
             <div class="row">
                 <div class="col-md-6">
@@ -38,25 +38,29 @@
                                 Please enter price
                             </div>
                         </div>
+                        
                         <div class="form-group">
-                            <label for="">Sale Date <span style="color: red;">(*)</span></label>
-                            <input required minlength="1" type="date" class="form-control" 
-                            name="saleDate" 
-                            #saleDate="ngModel" 
-                            [(ngModel)]="productService.formData.saleDate">
-                            <div class="text-left text-danger" *ngIf="saleDate.invalid && saleDate.touched">
-                                Please enter Sale Date
-                            </div>
+                            <label for="">Image <span style="color: red;">(*)</span></label>
+                            <input required  type="file" class="form-control" 
+                            name="image" 
+                            #image="ngModel" (change)="onFileSelect($event)"
+                            [(ngModel)]="productService.formData.image">
+                            
+                        </div>
+                        <div class="show-image">
+                            <img [src]="urlImg" class="img" *ngIf="urlImg">
                         </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="">Image <span style="color: red;">(*)</span></label>
-                        <input required  type="file" class="form-control" 
-                        name="image" 
-                        #image="ngModel" (change)="onFileSelect($event)"
-                        [(ngModel)]="productService.formData.image">
-                        
+                        <label for="">Sale Date <span style="color: red;">(*)</span></label>
+                        <input required minlength="1" type="date" class="form-control" 
+                        name="saleDate" 
+                        #saleDate="ngModel" 
+                        [(ngModel)]="productService.formData.saleDate">
+                        <div class="text-left text-danger" *ngIf="saleDate.invalid && saleDate.touched">
+                            Please enter Sale Date
+                        </div>
                     </div>
                     <div class="form-group">
                             <label for="">Brand Name <span style="color: red;">(*)</span></label>
@@ -76,6 +80,7 @@
                         
                     </div>
                     
+                    
                 </div>
             </div>
             
@@ -84,5 +89,6 @@
 
             <button class="mt-4" mat-raised-button 
             color="primary" type="submit" [disabled]="form.invalid">Add Product</button>
+            <button type="reset" class="btn btn-secondary but-reset">Reset</button>
         </form>
     </div>
