--- a/src/app/component/product/edit-product/edit-product.component.html
+++ b/src/app/component/product/edit-product/edit-product.component.html
@@ -4,7 +4,7 @@
         <mat-icon>close</mat-icon>
     </button>
 </div>
-<div style="overflow: hidden; height: 500px;">
+<div style="overflow: hidden; height: 600px;">
         <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
             <div class="row">
                 <div class="col-md-6">
@@ -46,6 +46,19 @@
                             Please enter price
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="">Image <span style="color: red;">(*)</span></label>
+                        <input  type="file" class="form-control" 
+                        name="image" (change)="onFileSelect($event)"
+                        #image
+                        >
+                        
+                    </div>
+                    <div class="show-image">
+                        <img src="http://localhost:8080/ngocanh-pilot/images/{{ productService.formData.image }}" class="img" *ngIf="!urlImg">
+                        <img [src]="urlImg" class="img" *ngIf="urlImg">
+                    </div>
+                    
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -57,14 +70,6 @@
                         <div class="text-left text-danger" *ngIf="saleDate.invalid && saleDate.touched">
                             Please enter Sale Date
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="">Image <span style="color: red;">(*)</span></label>
-                        <input  type="file" class="form-control" 
-                        name="image" (change)="onFileSelect($event)"
-                        #image
-                        >
-                        
                     </div>
                     <div class="form-group">
                         <label for="">Brand Name <span style="color: red;">(*)</span></label>
@@ -80,16 +85,11 @@
                         name="description" 
                         #description="ngModel" 
                         [(ngModel)]="productService.formData.description"  cols="30" rows="3"></textarea>
-                        
-                    </div>
-                    
+                    </div> 
                 </div>
             </div>
-            
-            
-            
-
             <button class="mt-4" mat-raised-button 
             color="primary" type="submit" [disabled]="form.invalid">Edit Product</button>
+            <button  (click)="onClose(); $event.preventDefault()" class="btn btn-secondary but-reset">Cancel</button>
         </form>
     </div>
