--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -17,19 +17,19 @@
             <div class="col-2">
                 <select class="custom-select" [ngModel]="this.priceFromDefault" name="priceFrom">
                     <option value="0">Price from</option>
-                    <option value="1000000">1.000.000 vnđ</option>
-                    <option value="5000000">5.000.000 vnđ</option> 
-                    <option value="10000000">10.000.000 vnđ</option>
-                    <option value="20000000">20.000.000 vnđ</option>
+                    <option value="1000000">1.000.000 VNĐ</option>
+                    <option value="5000000">5.000.000 VNĐ</option> 
+                    <option value="10000000">10.000.000 VNĐ</option>
+                    <option value="20000000">20.000.000 VNĐ</option>
                 </select>
             </div>
             <div class="col-2">
                 <select class="custom-select" [ngModel]="this.priceToDefault" ngModel name="priceTo">
                     <option value="0">Price to</option>
-                    <option value="1000000">1.000.000 vnđ</option>
-                    <option value="5000000">5.000.000 vnđ</option>
-                    <option value="10000000">10.000.000 vnđ</option>
-                    <option value="20000000">20.000.000 vnđ</option>
+                    <option value="1000000">1.000.000 VNĐ</option>
+                    <option value="5000000">5.000.000 VNĐ</option>
+                    <option value="10000000">10.000.000 VNĐ</option>
+                    <option value="20000000">20.000.000 VNĐ</option>
                 </select>
             </div>
             <div class="col-2">
@@ -60,7 +60,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Price">
                         <mat-header-cell *matHeaderCellDef>Price</mat-header-cell>
-                        <mat-cell *matCellDef="let element">{{element.price}} vnđ</mat-cell>
+                        <mat-cell *matCellDef="let element">{{element.price|currency:"VND":"symbol"}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="SaleDate">
