--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -34,8 +34,14 @@
             </div>
             <div class="col-2">
                 <button class="btn btn-primary butSearch" type="submit">Search</button>
+
             </div>
-            <div class="col-1"></div>
+            
+            <div class="col-1">
+                <button mat-icon-button color="warn" (click)="refreshProductList(this.formSearchNull)">
+                    <mat-icon>refresh</mat-icon>
+                </button>
+            </div>
         </div>
     </form>
 </div>
